# smart_watch

./: .buildinfo  .dockerignore  .env.model  .gitignore  Dockerfile  LICENSE  README.md  conf.py  docker-compose.yml  evaluate_pipeline.py  evaluation_data.csv  genindex.html  index.html  index.rst  main.py  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js
.doctrees/: index.doctree
.doctrees/architecture/: bdd.doctree  diagramme.doctree  introduction.doctree  modules.doctree  stack.doctree
.doctrees/guide/: choosing_embeddings.doctree  configuration.doctree  docker.doctree  installation.doctree  introduction.doctree  sommaire.doctree  utilisation_docker.doctree
.doctrees/source/: main.doctree
.github/workflows/: build-docker.yaml  doc.yaml
_modules/: index.html  main.html
_sources/: index.rst.txt
_sources/architecture/: bdd.rst.txt  diagramme.rst.txt  modules.rst.txt  stack.rst.txt
_sources/guide/: choosing_embeddings.rst.txt  configuration.rst.txt  docker.rst.txt  installation.rst.txt  introduction.rst.txt  sommaire.rst.txt
_sources/source/: main.rst.txt
_static/: documentation_options.js
architecture/: bdd.html  diagramme.html  introduction.html  modules.html  stack.html
assets/: ReportTemplate.html  SimpleReportTemplate.html  model.py  opening_hours_schema.json  opening_hours_schema_template.json  schema_bdd.py
config/: base_config.py  database_config.py  email_config.py  llm_config.py  markdown_filtering_config.py  processing_config.py
core/: ComparateurHoraires.py  ConfigManager.py  CustomJsonToOSM.py  DatabaseManager.py  EnvoyerMail.py  ErrorHandler.py  GenererRapportHTML.py  GetPrompt.py  LLMClient.py  Logger.py  MarkdownProcessor.py  NotificationManager.py  URLRetriever.py  horaires_comparator.py
docs/: build_docs.py  conf.py  index.rst  requirements.txt
docs/_templates/: footer.html
docs/architecture/: bdd.rst  diagramme.rst  flux.rst  introduction.rst  modules.rst  schema_projet.graphml  stack.rst
guide/: choosing_embeddings.html  configuration.html  docker.html  installation.html  introduction.html  sommaire.html  utilisation_docker.html
notebook/: temperature_variance_analysis.ipynb
processing/: __init__.py  comparison_processor.py  database_manager.py  llm_processor.py  url_processor.py
reporting/: __init__.py  report_manager.py
source/: main.html
tests/: conftest.py  test_csv_to_polars.py  test_custom_json_to_osm.py  test_jours_feries.py  test_markdown_cleaner.py  test_osm_to_custom_json.py  test_utils.py  test_vacances_scolaires.py
utils/: CSVToPolars.py  CustomJsonToOSM.py  HtmlToMarkdown.py  JoursFeries.py  OSMToCustomJson.py  VacancesScolaires.py
(+304 files in other folders)
