[project]
name = "SmartWatch"
version = "1.0.0"
description = "Le monitoring intelligent des horaires d'ouverture pour la Métropole de Lyon"
readme = "README.md"
requires-python = ">=3.13"
homepage = "https://github.com/datagora-erasme/smart_watch"
documentation = "https://datagora-erasme.github.io/smart_watch"
dependencies = [
    "codecarbon>=3.0.2",
    "connectorx>=0.4.3",
    "dotenv>=0.9.9",
    "inscriptis>=2.6.0",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "lxml>=6.0.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "playwright>=1.54.0",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=5.0.0",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "sqlalchemy>=2.0.41",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
preview = false
