[project]
name = "SmartWatch"
version = "1.0.0"
description = "Le monitoring intelligent des horaires d'ouverture pour la Métropole de Lyon"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "codecarbon>=3.0.2",
    "connectorx>=0.4.3",
    "dotenv>=0.9.9",
    "fastembed>=0.7.3",
    "inscriptis>=2.6.0",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "pandas>=2.3.1",
    "playwright>=1.54.0",
    "playwright-stealth>=2.0.0",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "sqlalchemy>=2.0.41",
]

[project.urls]
Homepage = "https://github.com/datagora-erasme/smart_watch"
Documentation = "https://datagora-erasme.github.io/smart_watch"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
preview = false